--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 * {
-    /* box-sizing: border-box; */
-    margin: 0;
-    padding: 0;
-  overflow: hidden;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /* overflow: hidden; */
 }
 
 /* scrollbar.css */
